# request

./: .gitignore  README.md  com.github.guillotjulien.request.json  meson.build  uncrustify.cfg
data/: com.github.guillotjulien.request.appdata.xml.in  com.github.guillotjulien.request.desktop.in  com.github.guillotjulien.request.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  request-bar.h  request-double-entry.c  request-double-entry.h  request-header-list.c  request-header-list.h  request-response-bar.c  request-response-bar.h  request-response-panel.c  request-response-panel.h  request-source-view.c  request-source-view.h  request-url-bar.c  request-url-bar.h  request-window.c  request-window.h
src/resources/: request.gresource.xml
src/resources/ui/: request-double-entry.ui  request-header-view.ui  request-response-bar.ui  request-source-view.ui  request-url-bar.ui  window.ui
theme/: _colors.scss  main.scss  meson.build
theme/widgets/: _request-double-entry.scss  _request-response-bar.scss  _request-url-bar.scss
